--- a/package.json
+++ b/package.json
@@ -19,7 +19,9 @@
   "homepage": "https://github.com/Sanketh1220/address-book-api#readme",
   "dependencies": {
     "express": "^4.17.1",
-    "mongoose": "^5.12.13"
+    "mongoose": "^5.12.13",
+    "npm": "^7.16.0",
+    "schema-validator": "^3.3.1"
   },
   "devDependencies": {
     "nodemon": "^2.0.7"
