--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "express": "^4.17.1",
     "mongoose": "^5.12.13",
     "npm": "^7.16.0",
-    "schema-validator": "^3.3.1"
+    "schema-validator": "^3.3.1",
+    "winston": "^3.3.3"
   },
   "devDependencies": {
     "nodemon": "^2.0.7"
