--- a/package.json
+++ b/package.json
@@ -19,10 +19,12 @@
   "homepage": "https://github.com/Sanketh1220/address-book-api#readme",
   "dependencies": {
     "@hapi/joi": "^17.1.1",
+    "bcrypt": "^5.0.1",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
     "express-joi-validation": "^5.0.0",
     "joi-validator": "^0.0.7",
+    "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.12.13",
     "npm": "^7.16.0",
     "schema-validator": "^3.3.1",
@@ -34,6 +36,8 @@
     "chai-http": "^4.3.0",
     "mocha": "^8.4.0",
     "nodemon": "^2.0.7",
-    "should": "^13.2.3"
+    "should": "^13.2.3",
+    "superagent": "^3.8.3",
+    "supertest": "^6.1.3"
   }
 }
